<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/RootLayoutStyle">

        <!--  界面提示  -->
        <LinearLayout
            android:id="@+id/text_interface_tip_linear_layout"
            android:layout_alignParentTop="true"
            style="@style/InterfaceTipLinearLayoutStyle">
            <TextView
                style="@style/InterfaceTipTextViewStyle"
                android:text="@string/text_trans_interface_tip" />

            <View
                style="@style/SplitLineViewStyle" />
        </LinearLayout>

        <!--  Spinner  -->
        <LinearLayout
            android:id="@+id/text_spinner_set_linear_layout"
            android:layout_below="@+id/text_interface_tip_linear_layout"
            style="@style/SpinnerSetLinearLayoutStyle">

            <Spinner
                android:id="@+id/text_from_lang_spinner"
                style="@style/CommonSpinnerStyle"/>

            <TextView
                android:id="@+id/text_exchange_lang_text_view"
                style="@style/ExchangeLangTextViewStyle"
                android:text="@string/exchange_lang_text"/>

            <Spinner
                android:id="@+id/text_to_lang_spinner"
                style="@style/CommonSpinnerStyle" />
        </LinearLayout>

        <!--  输入  -->
        <LinearLayout
            android:id="@+id/text_input_linear_layout"
            android:layout_below="@+id/text_spinner_set_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:background="@drawable/text_trans_input_linear_layout">

            <!--  输入框  -->
            <EditText
                android:id="@+id/text_input_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:minLines="4"
                android:maxLines="4"
                android:gravity="center"
                android:ellipsize="end"
                android:textSize="16sp"
                android:textColor="@color/common_text_color"
                android:textColorHint="@color/text_edit_text_hint_color"
                android:hint="@string/text_trans_input_edit_hint" />

            <TextView
                android:id="@+id/text_clear_input_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:visibility="gone"
                android:background="@drawable/clear_input_text_view_selector"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/text_trans_clear_input_text"/>
        </LinearLayout>

        <!--  翻译按钮  -->
        <Button
            android:id="@+id/text_translate_button"
            android:layout_below="@id/text_input_linear_layout"
            style="@style/CommonButtonStyle"
            android:visibility="gone"
            android:text="@string/text_trans_translate_button_text"/>
        <!--  历史记录  -->
        <ScrollView
            android:id="@+id/text_history_set_scroll_view"
            style="@style/CommonScrollStyle"
            android:layout_below="@id/text_translate_button">

            <LinearLayout
                android:id="@+id/text_history_set_linear_layout"
                style="@style/HistorySetLinearLayoutStyle">

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>